cluster-setup/main-gateway/main-gateway.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway  
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    hostname: "*.cluster.stevenchen.one"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard-cert
